--- a/PA1_template.html
+++ b/PA1_template.html
@@ -334,7 +334,7 @@ for (i in 1:nrow(newStepsDF[is.na(newStepsDF$steps),])) {
 }
 </code></pre>
 
-<p>Replacing the NAs by the mean of non zero observations has a significant impact. The histogram below shows that by .</p>
+<p>Replacing the NAs by the mean of non zero observations has a significant impact. The histogram below shows that by a clear chage in the frequencies distribution.</p>
 
 <pre><code class="r">library(ggplot2)
 library(gridExtra)
